--- a/BioMFA_Client/BioMFA_Web/src/app.html
+++ b/BioMFA_Client/BioMFA_Web/src/app.html
@@ -1,3 +1,22 @@
+<style>
+	html,
+	body {
+		margin: 0;
+		padding: 0;
+		border: 0;
+	}
+
+	body {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		min-height: 100vh;
+		background-color: #363636;
+		font-family: 'sans-serif-thin', sans-serif;
+	}
+</style>
+
 <!doctype html>
 <html lang="en">
 	<head>
